strapi/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: strapi-app
  labels:
    app: strapi-app
spec:
  replicas: 1
  selector:
     matchLabels:
        app: strapi-app 
  template:
    metadata:
      labels:
        app: strapi-app
    spec:
      containers:
      - name: strapi-app
        image: strapi/strapi
        imagePullPolicy: Always
        ports:
        - containerPort: 1337
