strapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-svc
  labels:
    app: strapi-app
spec:
  ports:
  - port: 80
    targetPort: 1337
    protocol: TCP
    name: https
  selector:
    app: strapi-app
