strapi/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: strapi-ingress
spec:
  tls:
    - hosts:
      - strapiapp.buffer.com
  rules:
  - host: strapiapp.buffer.com
    http:
      paths:
      - path: /admin
        backend:
          serviceName: strapi-svc
          servicePort: 1337
